# polyfill2-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/: book_updates.rs  comparison_benchmarks.rs  fill_processing.rs  network_benchmarks.rs  ws_hot_path.rs
docs/superpowers/plans/: 2026-04-23-ws-book-snapshot-fix.md
docs/superpowers/specs/: 2026-04-23-ws-book-snapshot-fix-design.md
examples/: benchmark_with_keepalive.rs  demo.rs  performance_benchmark.rs  quick_demo.rs  side_by_side_benchmark.rs  snipe.rs
scripts/: benchmark_comparison.sh  network_benchmark.sh
src/: auth.rs  book.rs  client.rs  dns_cache.rs  lib.rs  orders.rs  stream.rs  types.rs  utils.rs  ws_hot_path.rs
tests/: book_snapshot_tests.rs  integration_tests.rs  integration_v2.rs  no_alloc_hot_paths.rs  order_posting_test.rs  prices_history_integration_tests.rs  simple_auth_test.rs  ws_integration_tests.rs
tests/common/: mod.rs
